Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/APlayerCameraManager.h

	DOTNET_EXPORT auto E_PROP_APlayerCameraManager_BlendParams_GET(APlayerCameraManager* Ptr) { return (INT_PTR)&(Ptr->BlendParams); }
	DOTNET_EXPORT void E_PROP_APlayerCameraManager_BlendParams_SET(APlayerCameraManager* Ptr, INT_PTR Value) { Ptr->BlendParams = *(FViewTargetTransitionParams*)Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerCameraManager_BlendTimeToGo_GET(APlayerCameraManager* Ptr) { return Ptr->BlendTimeToGo; }
	DOTNET_EXPORT void E_PROP_APlayerCameraManager_BlendTimeToGo_SET(APlayerCameraManager* Ptr, float Value) { Ptr->BlendTimeToGo = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerCameraManager_CameraCache_GET(APlayerCameraManager* Ptr) { return (INT_PTR)&(Ptr->CameraCache); }
	DOTNET_EXPORT void E_PROP_APlayerCameraManager_CameraCache_SET(APlayerCameraManager* Ptr, INT_PTR Value) { Ptr->CameraCache = *(FCameraCacheEntry*)Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerCameraManager_CameraStyle_GET(APlayerCameraManager* Ptr) { return ConvertToManage_StringWrapper(Ptr->CameraStyle); }
	DOTNET_EXPORT void E_PROP_APlayerCameraManager_CameraStyle_SET(APlayerCameraManager* Ptr, char* Value) { Ptr->CameraStyle = ConvertFromManage_FName(Value); }
	
	DOTNET_EXPORT auto E_PROP_APlayerCameraManager_ColorScale_GET(APlayerCameraManager* Ptr) { return (INT_PTR)&(Ptr->ColorScale); }
	DOTNET_EXPORT void E_PROP_APlayerCameraManager_ColorScale_SET(APlayerCameraManager* Ptr, INT_PTR Value) { Ptr->ColorScale = *(FVector*)Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerCameraManager_ColorScaleInterpDuration_GET(APlayerCameraManager* Ptr) { return Ptr->ColorScaleInterpDuration; }
	DOTNET_EXPORT void E_PROP_APlayerCameraManager_ColorScaleInterpDuration_SET(APlayerCameraManager* Ptr, float Value) { Ptr->ColorScaleInterpDuration = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerCameraManager_ColorScaleInterpStartTime_GET(APlayerCameraManager* Ptr) { return Ptr->ColorScaleInterpStartTime; }
	DOTNET_EXPORT void E_PROP_APlayerCameraManager_ColorScaleInterpStartTime_SET(APlayerCameraManager* Ptr, float Value) { Ptr->ColorScaleInterpStartTime = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerCameraManager_DefaultAspectRatio_GET(APlayerCameraManager* Ptr) { return Ptr->DefaultAspectRatio; }
	DOTNET_EXPORT void E_PROP_APlayerCameraManager_DefaultAspectRatio_SET(APlayerCameraManager* Ptr, float Value) { Ptr->DefaultAspectRatio = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerCameraManager_DefaultFOV_GET(APlayerCameraManager* Ptr) { return Ptr->DefaultFOV; }
	DOTNET_EXPORT void E_PROP_APlayerCameraManager_DefaultFOV_SET(APlayerCameraManager* Ptr, float Value) { Ptr->DefaultFOV = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerCameraManager_DefaultOrthoWidth_GET(APlayerCameraManager* Ptr) { return Ptr->DefaultOrthoWidth; }
	DOTNET_EXPORT void E_PROP_APlayerCameraManager_DefaultOrthoWidth_SET(APlayerCameraManager* Ptr, float Value) { Ptr->DefaultOrthoWidth = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerCameraManager_DesiredColorScale_GET(APlayerCameraManager* Ptr) { return (INT_PTR)&(Ptr->DesiredColorScale); }
	DOTNET_EXPORT void E_PROP_APlayerCameraManager_DesiredColorScale_SET(APlayerCameraManager* Ptr, INT_PTR Value) { Ptr->DesiredColorScale = *(FVector*)Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerCameraManager_FadeAlpha_GET(APlayerCameraManager* Ptr) { return (INT_PTR)&(Ptr->FadeAlpha); }
	DOTNET_EXPORT void E_PROP_APlayerCameraManager_FadeAlpha_SET(APlayerCameraManager* Ptr, INT_PTR Value) { Ptr->FadeAlpha = *(FVector2D*)Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerCameraManager_FadeAmount_GET(APlayerCameraManager* Ptr) { return Ptr->FadeAmount; }
	DOTNET_EXPORT void E_PROP_APlayerCameraManager_FadeAmount_SET(APlayerCameraManager* Ptr, float Value) { Ptr->FadeAmount = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerCameraManager_FadeColor_GET(APlayerCameraManager* Ptr) { return (INT_PTR)&(Ptr->FadeColor); }
	DOTNET_EXPORT void E_PROP_APlayerCameraManager_FadeColor_SET(APlayerCameraManager* Ptr, INT_PTR Value) { Ptr->FadeColor = *(FLinearColor*)Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerCameraManager_FadeTime_GET(APlayerCameraManager* Ptr) { return Ptr->FadeTime; }
	DOTNET_EXPORT void E_PROP_APlayerCameraManager_FadeTime_SET(APlayerCameraManager* Ptr, float Value) { Ptr->FadeTime = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerCameraManager_FadeTimeRemaining_GET(APlayerCameraManager* Ptr) { return Ptr->FadeTimeRemaining; }
	DOTNET_EXPORT void E_PROP_APlayerCameraManager_FadeTimeRemaining_SET(APlayerCameraManager* Ptr, float Value) { Ptr->FadeTimeRemaining = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerCameraManager_FreeCamDistance_GET(APlayerCameraManager* Ptr) { return Ptr->FreeCamDistance; }
	DOTNET_EXPORT void E_PROP_APlayerCameraManager_FreeCamDistance_SET(APlayerCameraManager* Ptr, float Value) { Ptr->FreeCamDistance = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerCameraManager_FreeCamOffset_GET(APlayerCameraManager* Ptr) { return (INT_PTR)&(Ptr->FreeCamOffset); }
	DOTNET_EXPORT void E_PROP_APlayerCameraManager_FreeCamOffset_SET(APlayerCameraManager* Ptr, INT_PTR Value) { Ptr->FreeCamOffset = *(FVector*)Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerCameraManager_LastFrameCameraCache_GET(APlayerCameraManager* Ptr) { return (INT_PTR)&(Ptr->LastFrameCameraCache); }
	DOTNET_EXPORT void E_PROP_APlayerCameraManager_LastFrameCameraCache_SET(APlayerCameraManager* Ptr, INT_PTR Value) { Ptr->LastFrameCameraCache = *(FCameraCacheEntry*)Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerCameraManager_OriginalColorScale_GET(APlayerCameraManager* Ptr) { return (INT_PTR)&(Ptr->OriginalColorScale); }
	DOTNET_EXPORT void E_PROP_APlayerCameraManager_OriginalColorScale_SET(APlayerCameraManager* Ptr, INT_PTR Value) { Ptr->OriginalColorScale = *(FVector*)Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerCameraManager_PCOwner_GET(APlayerCameraManager* Ptr) { return ConvertToManage_ObjectPointerDescription(Ptr->PCOwner); }
	DOTNET_EXPORT void E_PROP_APlayerCameraManager_PCOwner_SET(APlayerCameraManager* Ptr, APlayerController* Value) { Ptr->PCOwner = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerCameraManager_PendingViewTarget_GET(APlayerCameraManager* Ptr) { return (INT_PTR)&(Ptr->PendingViewTarget); }
	DOTNET_EXPORT void E_PROP_APlayerCameraManager_PendingViewTarget_SET(APlayerCameraManager* Ptr, INT_PTR Value) { Ptr->PendingViewTarget = *(FTViewTarget*)Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerCameraManager_ViewTarget_GET(APlayerCameraManager* Ptr) { return (INT_PTR)&(Ptr->ViewTarget); }
	DOTNET_EXPORT void E_PROP_APlayerCameraManager_ViewTarget_SET(APlayerCameraManager* Ptr, INT_PTR Value) { Ptr->ViewTarget = *(FTViewTarget*)Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerCameraManager_ViewTargetOffset_GET(APlayerCameraManager* Ptr) { return (INT_PTR)&(Ptr->ViewTargetOffset); }
	DOTNET_EXPORT void E_PROP_APlayerCameraManager_ViewTargetOffset_SET(APlayerCameraManager* Ptr, INT_PTR Value) { Ptr->ViewTargetOffset = *(FVector*)Value; }
	
	
	DOTNET_EXPORT INT_PTR E_NewObject_APlayerCameraManager(UObject* Parent, char* Name)
	{
		return (INT_PTR)NewObject<APlayerCameraManager>(Parent, FName(UTF8_TO_TCHAR(Name)));
	}
	DOTNET_EXPORT auto E_APlayerCameraManager_AddCachedPPBlend(APlayerCameraManager* Self, INT_PTR PPSettings, float BlendWeight)
	{
		auto& _p0 = *(FPostProcessSettings*)PPSettings;
		auto _p1 = BlendWeight;
		Self->AddCachedPPBlend(_p0, _p1);
	}
	DOTNET_EXPORT auto E_APlayerCameraManager_ClearCachedPPBlends(APlayerCameraManager* Self)
	{
		((E_PROTECTED_WRAP_APlayerCameraManager*)Self)->ClearCachedPPBlends_WRAP();
	}
	DOTNET_EXPORT auto E_APlayerCameraManager_GetCameraCachePOV(APlayerCameraManager* Self)
	{
		return (INT_PTR) new FMinimalViewInfo(Self->GetCameraCachePOV());
	}
	DOTNET_EXPORT auto E_APlayerCameraManager_GetCameraCacheTime(APlayerCameraManager* Self)
	{
		return Self->GetCameraCacheTime();
	}
	DOTNET_EXPORT auto E_APlayerCameraManager_GetLastFrameCameraCachePOV(APlayerCameraManager* Self)
	{
		return (INT_PTR) new FMinimalViewInfo(Self->GetLastFrameCameraCachePOV());
	}
	DOTNET_EXPORT auto E_APlayerCameraManager_GetLastFrameCameraCacheTime(APlayerCameraManager* Self)
	{
		return Self->GetLastFrameCameraCacheTime();
	}
	DOTNET_EXPORT auto E_APlayerCameraManager_GetLockedFOV(APlayerCameraManager* Self)
	{
		return Self->GetLockedFOV();
	}
	DOTNET_EXPORT auto E_APlayerCameraManager_SetCameraCachePOV(APlayerCameraManager* Self, INT_PTR InPOV)
	{
		auto& _p0 = *(FMinimalViewInfo*)InPOV;
		Self->SetCameraCachePOV(_p0);
	}
	DOTNET_EXPORT auto E_APlayerCameraManager_SetCameraCacheTime(APlayerCameraManager* Self, float InTime)
	{
		auto _p0 = InTime;
		((E_PROTECTED_WRAP_APlayerCameraManager*)Self)->SetCameraCacheTime_WRAP(_p0);
	}